--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -143,7 +143,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for the first 3 samples, print the image (which is a 512 by 512 matrix), the tumorBorder (1, 30), and the tumorMask (512, 512)"
+    "# for the first 3 samples, print the image (which is a 512 by 512 matrix), the tumorBorder (1, 30), and the tumorMask (512, 512)\n",
+    "for i in range(3):\n",
+    "    print(f'Sample {i}:')\n",
+    "    fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "    ax[0].imshow(data[i]['image'], cmap='gray')\n",
+    "    ax[0].set_title('Image')\n",
+    "    ax[1].imshow(data[i]['tumorMask'], cmap='gray')\n",
+    "    ax[1].set_title('Tumor Mask')\n",
+    "    ax[2].imshow(data[i]['tumorBorder'], cmap='gray')\n",
+    "    ax[2].set_title('Tumor Border')\n",
+    "    plt.show()"
    ]
   }
  ],
