--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -37,11 +37,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading the data \n",
+    "# Loading the data \n",
     "\n",
     "- We use the naming format of the data files to extract the information from them and store them in the dataframe ```data``` variable.\n",
     "- The ```data``` variable stores a dictionary where each key corresponds to a file (We might consolidate all the entries into one dataframe later on). Each entry in the dictionary stores a list of datapoints. \n",
-    "- Each datapoint is a dictionary with the following keys: (Labels: dict_keys(['PID', 'image', 'label', 'tumorBorder', 'tumorMask']))\n",
+    "- Each datapoint is a dictionary with the following keys: \n",
     "    - <i>PID</i>: Patient ID\n",
     "    - <i>image</i>: Image data\n",
     "    - <i>label</i>: Label of the image\n",
@@ -98,6 +98,13 @@
     "            # print(f'Counter: {counter}')\n",
     "    dir_counter += 1\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory data analysis"
    ]
   },
   {
@@ -195,7 +202,8 @@
    "source": [
     "### Printing a few datapoints for each tumor type\n",
     "\n",
-    "Here, we use the label attribute to get the tumor type of each image. We then print a few images for each tumor type to get a sense of the data."
+    "Here, we use the label attribute to get the tumor type of each image. We then print a few images for each tumor type to get a sense of the data. <br>\n",
+    "We have also created a function that visualizes the images in the data. "
    ]
   },
   {
